syntax = "proto3";

option go_package = ".;pb";

message Transaction {
    string type = 1;
    string client_id = 2;
    string date = 3;
    string description = 4;
    int32 value = 5;
}

message LimitAndBalance {
    int32 limit = 1;
    int32 balance = 2;
}

message SaveRequest {
    Transaction transaction = 1;
}

message SaveResponse {
    bool error = 1;
    string message = 2;
    LimitAndBalance limit_and_balance = 3;
}

message GetExtractRequest {
    string client_id = 1;
}

message GetExtractResponse {
    LimitAndBalance limit_and_balance = 1;
    repeated Transaction transactions = 2;
}

service StoreService {
    rpc Save(SaveRequest) returns (SaveResponse);
    rpc GetExtract(GetExtractRequest) returns (GetExtractResponse);
}